--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
-    "stripe": "^14.18.0",
     "firebase-admin": "^12.0.0",
-    "cors": "^2.8.5"
+    "stripe": "^14.18.0"
   }
 }
